--- a/main.html
+++ b/main.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+    <h3>What is the capital of India?</h3>
+	<form>
+		<label>
+      <input type="radio" name="capital" value="new-delhi"> New Delhi
+    </label><br>
+    <label>
+      <input type="radio" name="capital" value="mumbai"> Mumbai
+    </label>
+	</form>
+  
+
+  <blockquote class="styled-quote" cite="https://en.wikipedia.org/wiki/New_Delhi">
+    “New Delhi is the capital of India and an administrative district of NCT Delhi.”
+  </blockquote>
+
+  <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
